--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "method-override": "^2.3.7",
     "mysql": "^2.13.0",
     "node-sql": "^1.1.1",
+    "siege": "^0.2.0",
     "underscore": "*"
   },
   "devDependencies": {},
