--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^1.0.2",
+    "dotenv": "^4.0.0",
     "express": "^4.13.4",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "morgan": "^1.8.1",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "pbkdf2": "^3.0.9",
